switch to using cards for display

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -54,6 +54,7 @@ dl.show-device
   @extend .row
   dt
     @extend .col-4
+    @extend .text-right
   dd
     @extend .col-8
 
@@ -62,6 +63,7 @@ dl.show-licence
   @extend .row
   dt
     @extend .col-4
+    @extend .text-right
   dd
     @extend .col-8
 
@@ -70,6 +72,7 @@ dl.show-person
   @extend .row
   dt
     @extend .col-3
+    @extend .text-right
   dd
     @extend .col-9
 
