--- a/app/views/import/index.html.erb
+++ b/app/views/import/index.html.erb
@@ -1,43 +1,66 @@
-<h1 class="mb-4">Import Data</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
 
-<h3>Import People</h3>
-<%= form_tag import_people_path, multipart: true do %>
-  <div class="form-group">
-    <div class="custom-file col-6">
-      <%= file_field_tag(:people_file, class: "custom-file-input") %>
-      <%= label_tag(:people_file, "Choose file", class: "custom-file-label") %>
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>Import People</h3>
+        </div>
+        <div class="card-body">
+        <%= form_tag import_people_path, multipart: true do %>
+          <div class="form-group">
+            <div class="custom-file">
+              <%= file_field_tag(:people_file, class: "custom-file-input") %>
+              <%= label_tag(:people_file, "Choose file", class: "custom-file-label") %>
+            </div>
+          </div>
+            <div class="form-group">
+            <%= submit_tag("Import People", class: "btn btn-success") %>
+            <%= link_to 'Download People template csv', asset_path("people_template.csv"), class: "btn btn-link" %>
+          </div>
+        <% end %>
+        </div>
+      </div>
+
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>Import Devices</h3>
+        </div>
+        <div class="card-body">
+          <%= form_tag import_devices_path, multipart: true do %>
+            <div class="form-group">
+              <div class="custom-file">
+                <%= file_field_tag(:device_file, class: "custom-file-input") %>
+                <%= label_tag(:device_file, "Choose file", class: "custom-file-label") %>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= submit_tag "Import Devices", class: "btn btn-success" %>
+              <%= link_to 'Download Devices template csv', asset_path("devices_template.csv"), class: "btn btn-link" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>Import Licences</h3>
+        </div>
+        <div class="card-body">
+          <%= form_tag import_licences_path, multipart: true do %>
+            <div class="form-group">
+              <div class="custom-file">
+                <%= file_field_tag(:licence_file, class: "custom-file-input") %>
+                <%= label_tag(:licence_file, "Choose file", class: "custom-file-label") %>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= submit_tag("Import Licences", class: "btn btn-success") %>
+              <%= link_to 'Download Licences template csv', asset_path("licences_template.csv"), class: "btn btn-link" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="form-group">
-    <%= submit_tag("Import People", class: "btn btn-success") %>
-    <%= link_to 'Download People template csv', asset_path("people_template.csv"), class: "btn btn-link" %>
-  </div>
-<% end %>
-
-<h3 class="mt-4">Import Devices</h3>
-<%= form_tag import_devices_path, multipart: true do %>
-  <div class="form-group">
-    <div class="custom-file col-6">
-      <%= file_field_tag(:device_file, class: "custom-file-input") %>
-      <%= label_tag(:device_file, "Choose file", class: "custom-file-label") %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= submit_tag "Import Devices", class: "btn btn-success" %>
-    <%= link_to 'Download Devices template csv', asset_path("devices_template.csv"), class: "btn btn-link" %>
-  </div>
-<% end %>
-
-<h3 class="mt-4">Import Licences</h3>
-<%= form_tag import_licences_path, multipart: true do %>
-  <div class="form-group">
-    <div class="custom-file col-6">
-      <%= file_field_tag(:licence_file, class: "custom-file-input") %>
-      <%= label_tag(:licence_file, "Choose file", class: "custom-file-label") %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= submit_tag("Import Licences", class: "btn btn-success") %>
-    <%= link_to 'Download Licences template csv', asset_path("licences_template.csv"), class: "btn btn-link" %>
-  </div>
-<% end %>
+</div>
