--- a/app/views/licences/show.html.erb
+++ b/app/views/licences/show.html.erb
@@ -5,7 +5,7 @@
   <%= notice %>
 </div>
 <% end %>
-<div class="col-6">
+<div class="col-lg-6">
   <div class="card bg-light mt-4">
     <div class="card-header container-fluid">
       <div class="row">
