--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -1,10 +1,10 @@
-<%= bootstrap_form_for(@person, layout: :horizontal, label_col: "col-sm-12 col-md-3 col-lg-2", control_col: "col-sm-12 col-md-6 col-lg-4") do |f| %>
+<%= bootstrap_form_for(@person, layout: :horizontal, label_col: "col-lg-3 text-lg-right", control_col: "col") do |f| %>
   <%= f.text_field :first_name %>
   <%= f.text_field :last_name %>
   <%= f.text_field :location %>
   <%= f.text_area :notes %>
   <div class="row">
-  <div class="col-md-4 offset-md-3 offset-lg-2">
+  <div class="col offset-lg-3">
   <%= f.submit "Submit", class: "btn btn-success" %>
   <%= link_to "Back", :back, class: "btn btn-primary" %>
   </div>
