--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -1,4 +1,14 @@
-<h1>New Person</h1>
-<hr />
-
-<%= render 'form' %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-6">
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>New Person</h3>
+        </div>
+        <div class="card-body">
+          <%= render 'form' %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
