--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -8,7 +8,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col">
+    <div class="col-lg-6">
       <div class="card bg-light mt-4">
         <div class="card-header container-fluid">
           <div class="row">
@@ -36,51 +36,63 @@
           </dl>
         </div>
       </div>
-      <%= link_to 'Back', people_path, class: "btn btn-primary mt-3" %>
     </div>
 
-    <div class="col">
-      <h2 class="mt-4">User Licences</h2>
-      <table class="table table-striped table-borderless table-sm">
-        <thead>
-          <tr>
-            <th>Vendor</th>
-            <th>Application</th>
-            <th>Channel</th>
-          </tr>
-        </thead>
+    <div class="col-lg-6">
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>User Licences</h3>
+        </div>
+        <div class="card-body">
+          <table class="table table-striped table-borderless table-sm">
+            <thead>
+              <tr>
+                <th>Vendor</th>
+                <th>Application</th>
+                <th>Channel</th>
+              </tr>
+            </thead>
 
-        <tbody>
-          <% @person.licences.each do |l| %>
-          <tr>
-            <td><%= "#{l.vendor}" %></td>
-            <td><%= "#{l.app_full}" %></td>
-            <td><%= "#{l.channel}" %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+            <tbody>
+              <% @person.licences.each do |l| %>
+              <tr>
+                <td><%= "#{l.vendor}" %></td>
+                <td><%= "#{l.app_full}" %></td>
+                <td><%= "#{l.channel}" %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
 
-      <h2 class="mt-4">Device Licences</h2>
-      <table class="table table-striped table-borderless table-sm">
-        <thead>
-          <tr>
-            <th>Vendor</th>
-            <th>Application</th>
-            <th>Channel</th>
-          </tr>
-        </thead>
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>Device Licences</h3>
+        </div>
+        <div class="card-body">
+          <table class="table table-striped table-borderless table-sm">
+            <thead>
+              <tr>
+                <th>Vendor</th>
+                <th>Application</th>
+                <th>Channel</th>
+              </tr>
+            </thead>
 
-        <tbody>
-          <% @person.device.try(:licences).try(:each) do |l| %>
-          <tr>
-            <td><%= "#{l.vendor}" %></td>
-            <td><%= "#{l.app_full}" %></td>
-            <td><%= "#{l.channel}" %></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+            <tbody>
+              <% @person.device.try(:licences).try(:each) do |l| %>
+              <tr>
+                <td><%= "#{l.vendor}" %></td>
+                <td><%= "#{l.app_full}" %></td>
+                <td><%= "#{l.channel}" %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
+  <%= link_to 'Back', people_path, class: "btn btn-primary mt-3" %>
 </div>
