--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,19 +1,30 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-6">
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>Forgot your password?</h3>
+        </div>
+        <div class="card-body">
+          <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+            <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+            <div class="form-group row">
+              <%= f.label :email, class: "col-lg-2 col-form-label text-right" %>
+              <div class="col">
+                <%= f.email_field :email, autofocus: true, class: "form-control" %>
+              </div>
+            </div>
 
-  <div class="form-group row">
-    <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.email_field :email, autofocus: true, class: "form-control" %>
+            <div class="actions form-group row">
+              <div class="col offset-lg-2">
+                <%= f.submit "Reset password", class: "btn btn-success" %>
+                <%= link_to "Back", :back, class: "btn btn-primary" %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="actions form-group row">
-    <div class="col-sm-10 offset-sm-2">
-      <%= f.submit "Reset password", class: "btn btn-success" %>
-      <%= link_to "Back", :back, class: "btn btn-primary" %>
-    </div>
-  </div>
-<% end %>
+</div>
