--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,47 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <h3>Sign up</h3>
+        </div>
+        <div class="card-body">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+            <div class="form-group row">
+              <%= f.label :email, class: "col-lg-2 col-form-label text-right" %>
+              <div class="col">
+                <%= f.email_field :email, autofocus: true, class: "form-control" %>
+              </div>
+            </div>
 
-  <div class="form-group row">
-    <%= f.label :email, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.email_field :email, autofocus: true, class: "form-control" %>
+            <div class="form-group row">
+              <%= f.label :password, class: "col-lg-2 col-form-label text-right" %>
+              <div class="col">
+                <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+                <% if @minimum_password_length %>
+                  <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
+                <% end %>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <%= f.label :password_confirmation, class: "col-lg-2 col-form-label text-right" %>
+              <div class="col">
+                <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+              </div>
+            </div>
+
+            <div class="actions form-group row">
+              <div class="col offset-lg-3">
+                <%= f.submit "Sign up", class: "btn btn-success" %>
+                <%= link_to "Back", :back, class: "btn btn-primary" %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="form-group row">
-    <%= f.label :password, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-      <% if @minimum_password_length %>
-        <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
-      <% end %>
-    </div>
-  </div>
-
-  <div class="form-group row">
-    <%= f.label :password_confirmation, class: "col-sm-2 col-form-label text-right" %>
-    <div class="col-sm-4">
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-    </div>
-  </div>
-
-  <div class="actions form-group row">
-    <div class="col-sm-10 offset-sm-2">
-      <%= f.submit "Sign up", class: "btn btn-success" %>
-      <%= link_to "Back", :back, class: "btn btn-primary" %>
-    </div>
-  </div>
-<% end %>
+</div>
