--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,38 +1,57 @@
-<h1 class="mb-4">Hardware</h1>
-<table class="table table-striped table-sm table-borderless">
-  <thead>
-    <tr>
-      <th>Asset Tag</th>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Make</th>
-      <th>Model</th>
-      <th>Assigned to</th>
-      <th colspan="3" class="fit"></th>
-    </tr>
-  </thead>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col">
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <div class="row">
+            <div class="col">
+              <h3>Hardware</h3>
+            </div>
+            <div class="col">
+              <% if user_signed_in? %>
+              <%= link_to 'New Device', new_device_path, class: "btn btn-primary float-right" %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <table class="table table-striped table-sm table-borderless">
+            <thead>
+              <tr>
+                <th>Asset Tag</th>
+                <th>Name</th>
+                <th>Type</th>
+                <th>Make</th>
+                <th>Model</th>
+                <th>Assigned to</th>
+                <th colspan="3" class="fit">Actions</th>
+              </tr>
+            </thead>
 
-  <tbody>
-    <% @devices.each do |device| %>
-      <tr>
-        <td><%= device.tag_formatted %></td>
-        <td><%= device.name %></td>
-        <td><%= device.dev_type %></td>
-        <td><%= device.make %></td>
-        <td><%= device.model %></td>
-        <td><%= device.person.try(:full_name) %></td>
-        <td><%= link_to 'Show', device, class: "btn btn-success" %></td>
-        <% if user_signed_in? %>
-          <td><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
-          <td><%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
-        <% else %>
-          <td colspan="2"></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<% if user_signed_in? %>
-  <%= link_to 'New Device', new_device_path, class: "btn btn-primary" %>
-<% end %>
+            <tbody>
+              <% @devices.each do |device| %>
+              <tr>
+                <td><%= device.tag_formatted %></td>
+                <td><%= device.name %></td>
+                <td><%= device.dev_type %></td>
+                <td><%= device.make %></td>
+                <td><%= device.model %></td>
+                <td><%= device.person.try(:full_name) %></td>
+                <td><%= link_to 'Show', device, class: "btn btn-success" %></td>
+                <% if user_signed_in? %>
+                <td><%= link_to 'Edit', edit_device_path(device), class: "btn btn-primary" %></td>
+                <td>
+                  <%= link_to 'Delete', device, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+                </td>
+                <% else %>
+                <td colspan="2"></td>
+                <% end %>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
