--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,33 +1,49 @@
-<h1 class="mb-4">People</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col">
+      <div class="card bg-light mt-4">
+        <div class="card-header container-fluid">
+          <div class="row">
+            <div class="col">
+              <h3>People</h3>
+            </div>
+            <div class="col">
+              <% if user_signed_in? %>
+              <%= link_to 'New Person', new_person_path, class: "btn btn-primary float-right" %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <table class="table table-striped table-sm table-borderless">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Location</th>
+                <th colspan="3" class="fit">Actions</th>
+              </tr>
+            </thead>
 
-<table class="table table-striped table-sm table-borderless">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Location</th>
-      <th colspan="3" class="fit"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @people.each do |person| %>
-      <tr>
-        <td><%= person.full_name %></td>
-        <td><%= person.location %></td>
-        <td><%= link_to 'Show', person, class: "btn btn-success" %></td>
-        <% if user_signed_in? %>
-          <td><%= link_to 'Edit', edit_person_path(person), class: "btn btn-primary" %></td>
-          <td><%= link_to 'Delete', person, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
-        <% else %>
-          <td colspan="2"></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br />
-
-<% if user_signed_in? %>
-  <%= link_to 'New Person', new_person_path, class: "btn btn-primary" %>
-<% end %>
+            <tbody>
+              <% @people.each do |person| %>
+              <tr>
+                <td><%= person.full_name %></td>
+                <td><%= person.location %></td>
+                <td><%= link_to 'Show', person, class: "btn btn-success" %></td>
+                <% if user_signed_in? %>
+                <td><%= link_to 'Edit', edit_person_path(person), class: "btn btn-primary" %></td>
+                <td>
+                  <%= link_to 'Delete', person, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+                </td>
+                <% else %>
+                <td colspan="2"></td>
+                <% end %>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
